# sven

./: .coverage  .gitignore  CONTACT.md  CONTRIBUTIONS.md  INSTALL.md  ISSUES.md  LOGGING_MIGRATION_AUDIT.md  Makefile  PKGBUILD  README.md  SECURITY.md  UPDATES.md  install.sh  pyproject.toml  pytest_out.txt  run_sven.py
.github/workflows/: release.yml
scripts/: adopt_blfs.py  adopt_lfs.py  bootstrap.sh  install.sh  release.sh
sven/: __init__.py  __main__.py  cli.py  config.py  constants.py  exceptions.py  preflight.py  ssl_bundle.py  transaction.py
sven/builder/: __init__.py  aur_cache.py  makepkg.py  pkgbuild.py
sven/commands/: __init__.py  check_version.py  clean.py  deps.py  doctor.py  find_command.py  info.py  install.py  list_cmd.py  mirror.py  orphans.py  path_cmd.py  remove.py  rollback.py  search.py  self_update.py  snapshots.py  sync.py  update.py  upgrade.py  verify.py
sven/core/: updater.py
sven/db/: __init__.py  aur_db.py  db_version.py  local_db.py  models.py  sync_db.py
sven/downloader/: __init__.py  checksum.py  fetcher.py  gpg.py  mirror.py  pkgbuild_fetcher.py
sven/installer/: __init__.py  extractor.py  hooks.py  lib_checker.py  rollback.py
sven/migration/: __init__.py
sven/resolver/: __init__.py  compat.py  conflict.py  file_conflict.py  graph.py  search.py  sorter.py  systemd_filter.py
sven/security/: __init__.py  (+2 more)
tests/: test_aur_db.py  test_builder.py  test_cli.py  test_downloader.py  test_hardening.py  test_installer.py  test_local_db.py  test_models.py  test_resolver.py  test_security.py  test_sync_db.py  test_transaction.py
(+9 files in other folders)
